@@ -12,35 +12,25 @@ import org.osgi.service.metatype.annotations.*;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.ta4j.core.*;
-import org.ta4j.core.indicators.*;
+import org.ta4j.core.indicators.ATRIndicator;
+import org.ta4j.core.indicators.EMAIndicator;
+import org.ta4j.core.indicators.MACDIndicator;
 import org.ta4j.core.indicators.helpers.ClosePriceIndicator;
 import org.ta4j.core.num.DecimalNum;
 import org.ta4j.core.rules.*;
 
-import java.time.*;
+import java.time.Duration;
 import java.util.*;
-
-import static com.aem.ai.scanner.utils.Utils.mapTimeframe;
+import java.util.stream.Collectors;
 
 /**
  * OSGi Service for Open=High/Low (OHL) strategy with pivot-level filters and Telegram alerts.
  */
 @Designate(ocd = OHLStrategyScannerImpl.Config.class)
-@Component(
-        service = OHLStrategyScanner.class,
-        immediate = true
-)
+@Component(service = OHLStrategyScanner.class, immediate = true)
 public class OHLStrategyScannerImpl implements OHLStrategyScanner {
 
     private static final Logger log = LoggerFactory.getLogger(OHLStrategyScannerImpl.class);
-
-    // --- ANSI color codes for logs
-    private static final String RESET = "\u001B[0m";
-    private static final String GREEN = "\u001B[32m";
-    private static final String RED = "\u001B[31m";
-    private static final String YELLOW = "\u001B[33m";
-    private static final String BLUE = "\u001B[34m";
-    private static final String CYAN = "\u001B[36m";
 
     private volatile Config config;
 
@@ -52,6 +42,7 @@ public class OHLStrategyScannerImpl implements OHLStrategyScanner {
 
     private List<String> ohlTimeFrameList = new ArrayList<>();
 
+    // --------------------- Configuration --------------------- //
 
     @ObjectClassDefinition(
             name = "OHL (Open=High/Low) Strategy Service",
@@ -67,11 +58,20 @@ public class OHLStrategyScannerImpl implements OHLStrategyScanner {
         @AttributeDefinition(name = "ATR Break Factor")
         double atrBreakFactor() default 0.25;
 
+        @AttributeDefinition(name = "Stop Loss %")
+        double stopLossPct() default 0.01;
+
+        @AttributeDefinition(name = "Target %")
+        double targetPct() default 0.02;
+
         @AttributeDefinition(name = "Min Avg Volume")
         long minAvgVolume() default 5000;
 
         @AttributeDefinition(name = "Enable Pivot Filter")
         boolean enablePivotFilter() default true;
+
+        @AttributeDefinition(name = "Pivot timeframe (daily/weekly/monthly)")
+        String pivotTimeframe() default "daily";
 
         @AttributeDefinition(name = "Enable Telegram Alerts")
         boolean enableTelegram() default true;
@@ -85,60 +85,26 @@ public class OHLStrategyScannerImpl implements OHLStrategyScanner {
     protected void activate(Config cfg) {
         long start = System.currentTimeMillis();
         this.config = cfg;
-        if (cfg.ohl_scanner_tf()!=null){
-            ohlTimeFrameList = Arrays.stream(cfg.ohl_scanner_tf().split(",")).toList();
+        if (cfg.ohl_scanner_tf() != null) {
+            ohlTimeFrameList = Arrays.stream(cfg.ohl_scanner_tf().split(","))
+                    .map(String::trim)
+                    .collect(Collectors.toList());
         }
-        log.info(CYAN + "✅ OHLStrategyService activated" + RESET +
-                        " (enable={}, tol={}, atrBreak={}, vol={}, pivot={}, telegram={}) [{}ms]",
+        log.info("OHLStrategyService activated enable={} tol={} atrBreak={} sl={} tp={} vol={} pivot={} telegram={} [{}ms]",
                 cfg.enable(), cfg.tolerancePct(), cfg.atrBreakFactor(),
+                cfg.stopLossPct(), cfg.targetPct(),
                 cfg.minAvgVolume(), cfg.enablePivotFilter(), cfg.enableTelegram(),
                 System.currentTimeMillis() - start);
     }
 
     @Deactivate
     protected void deactivate() {
-        long start = System.currentTimeMillis();
-        log.info(RED + "🛑 OHLStrategyService deactivated" + RESET + " [{}ms]", System.currentTimeMillis() - start);
+        log.info("OHLStrategyService deactivated");
     }
 
-    // --- Pivot Levels calculator
+    // --------------------- Strategy --------------------- //
 
-
-    /** Convert List<Candle> -> BarSeries with logging */
-    private BarSeries buildSeries(String name, List<Candle> candles, Duration barDuration) {
-        long start = System.currentTimeMillis();
-        BaseBarSeriesBuilder builder = new BaseBarSeriesBuilder();
-        BarSeries series = builder.withName(name).build();
-
-        for (Candle c : candles) {
-            Bar bar = BaseBar.builder()
-                    .timePeriod(barDuration)
-                    .endTime(ZonedDateTime.from(c.time))
-                    .openPrice(DecimalNum.valueOf(c.open))
-                    .highPrice(DecimalNum.valueOf(c.high))
-                    .lowPrice(DecimalNum.valueOf(c.low))
-                    .closePrice(DecimalNum.valueOf(c.close))
-                    .volume(DecimalNum.valueOf(c.volume))
-                    .build();
-            series.addBar(bar);
-        }
-        log.debug(BLUE + "ℹ️ Built BarSeries [{}] with {} bars [{}ms]" + RESET,
-                name, series.getBarCount(), System.currentTimeMillis() - start);
-        return series;
-    }
-
-    private boolean priceBreak(BarSeries series, ATRIndicator atr, int index, double factor, boolean bullish) {
-        double open = series.getBar(0).getOpenPrice().doubleValue();
-        double latestClose = series.getBar(index).getClosePrice().doubleValue();
-        double threshold = atr.getValue(index).doubleValue() * factor;
-        return bullish
-                ? latestClose > open + threshold
-                : latestClose < open - threshold;
-    }
-
-    /** Build OHL strategy rules */
     private Strategy buildStrategy(BarSeries series) {
-        long start = System.currentTimeMillis();
         ClosePriceIndicator close = new ClosePriceIndicator(series);
         ATRIndicator atr = new ATRIndicator(series, 14);
         MACDIndicator macd = new MACDIndicator(close, 12, 26);
@@ -147,19 +113,8 @@ public class OHLStrategyScannerImpl implements OHLStrategyScanner {
         Rule openLow = new OpenEqualsLowRule(series, config.tolerancePct());
         Rule openHigh = new OpenEqualsHighRule(series, config.tolerancePct());
 
-        Rule bullishBreak = new AbstractRule() {
-            @Override
-            public boolean isSatisfied(int index, TradingRecord tradingRecord) {
-                return priceBreak(series, atr, index, config.atrBreakFactor(), true);
-            }
-        };
-
-        Rule bearishBreak = new AbstractRule() {
-            @Override
-            public boolean isSatisfied(int index, TradingRecord tradingRecord) {
-                return priceBreak(series, atr, index, config.atrBreakFactor(), false);
-            }
-        };
+        Rule bullishBreak = new ATRBreakRule(series, atr, config.atrBreakFactor(), true);
+        Rule bearishBreak = new ATRBreakRule(series, atr, config.atrBreakFactor(), false);
 
         Rule macdBull = new OverIndicatorRule(macd, macdSignal);
         Rule macdBear = new UnderIndicatorRule(macd, macdSignal);
@@ -168,24 +123,19 @@ public class OHLStrategyScannerImpl implements OHLStrategyScanner {
         Rule shortEntry = openHigh.and(bearishBreak.or(macdBear));
         Rule entry = longEntry.or(shortEntry);
 
-        Rule exit = new StopGainRule(close, DecimalNum.valueOf(0.02))
-                .or(new StopLossRule(close, DecimalNum.valueOf(0.01)));
+        Rule exit = new StopGainRule(close, DecimalNum.valueOf(config.targetPct()))
+                .or(new StopLossRule(close, DecimalNum.valueOf(config.stopLossPct())));
 
-        log.debug(BLUE + "ℹ️ Strategy built for series [{}] [{}ms]" + RESET,
-                series.getName(), System.currentTimeMillis() - start);
         return new BaseStrategy(entry, exit);
     }
 
-    /**
-     * Evaluate latest signal with timeframe string (e.g. "5m", "15m", "1h", "1d")
-     */
+    // --------------------- Evaluation --------------------- //
+//todo: add volume filter and optimize strategy not matching with live scanner OHL signals
     public Optional<Signal> evaluateLatest(List<Candle> candles, String timeframe, InstrumentSymbol symbol) {
-        long start = System.currentTimeMillis();
-        if (config == null || !config.enable()) {
-            log.debug(YELLOW + "⚠️ OHL strategy disabled, skipping [{}ms]" + RESET, System.currentTimeMillis() - start);
+        if (config == null || !config.enable() || candles == null || candles.isEmpty()) {
+            log.info("OHL strategy disabled or no candles tf={} symbol={}", timeframe, symbol);
             return Optional.empty();
         }
-        if (candles == null || candles.isEmpty()) return Optional.empty();
 
         try {
             String seriesName = symbol.getSymbol() + "-" + timeframe;
@@ -195,26 +145,23 @@ public class OHLStrategyScannerImpl implements OHLStrategyScanner {
             int last = series.getEndIndex();
             Bar lastBar = series.getBar(last);
 
-            // --- BUY signal
+            // BUY
             if (strategy.shouldEnter(last)) {
-                var sig = new Signal(Signal.Side.BUY,
+                Signal sig = new Signal(Signal.Side.BUY,
                         lastBar.getClosePrice().doubleValue(),
-                        lastBar.getClosePrice().doubleValue() * 0.99,
-                        lastBar.getClosePrice().doubleValue() * 1.02);
+                        lastBar.getClosePrice().doubleValue() * (1 - config.stopLossPct()),
+                        lastBar.getClosePrice().doubleValue() * (1 + config.targetPct()));
 
                 if (config.enablePivotFilter() && !pivotOk(sig, candles)) {
-                    log.info(YELLOW + "🚫 BUY blocked by pivot filter at {} [{}ms]" + RESET,
-                            sig.getEntryPrice(), System.currentTimeMillis() - start);
+                    log.info("BUY blocked by pivot filter symbol={} tf={} entry={}", symbol, timeframe, sig.getEntryPrice());
                     return Optional.empty();
                 }
 
-                log.info(GREEN + "📈 BUY [{}] signal: {} [{}ms]" + RESET,
-                        timeframe, sig, System.currentTimeMillis() - start);
-
+                log.info("BUY signal generated symbol={} tf={} {}", symbol, timeframe, sig);
                 return Optional.of(sig);
             }
 
-            // --- SELL signal
+            // SELL
             if (strategy.shouldExit(last)) {
                 Signal sig = new Signal(Signal.Side.SELL,
                         lastBar.getClosePrice().doubleValue(),
@@ -222,68 +169,87 @@ public class OHLStrategyScannerImpl implements OHLStrategyScanner {
                         lastBar.getClosePrice().doubleValue());
 
                 if (config.enablePivotFilter() && !pivotOk(sig, candles)) {
-                    log.info(YELLOW + "🚫 SELL blocked by pivot filter at {} [{}ms]" + RESET,
-                            sig.getEntryPrice(), System.currentTimeMillis() - start);
+                    log.info("SELL blocked by pivot filter symbol={} tf={} entry={}", symbol, timeframe, sig.getEntryPrice());
                     return Optional.empty();
                 }
 
-                log.info(RED + "📉 SELL [{}] signal: {} [{}ms]" + RESET,
-                        timeframe, sig, System.currentTimeMillis() - start);
+                log.info("SELL signal generated symbol={} tf={} {}", symbol, timeframe, sig);
                 return Optional.of(sig);
             }
 
-            log.debug(BLUE + "ℹ️ No entry/exit signal generated for latest bar [{}] [{}ms]" + RESET,
-                    timeframe, System.currentTimeMillis() - start);
             return Optional.empty();
 
         } catch (Exception e) {
-            log.error(RED + "❌ Error evaluating OHL strategy [{}] [{}ms]: {}" + RESET,
-                    timeframe, System.currentTimeMillis() - start, e.getMessage(), e);
+            log.error("Error evaluating OHL strategy tf={} symbol={} error={}", timeframe, symbol, e.getMessage(), e);
             return Optional.empty();
         }
     }
 
-    /** Check pivot filter conditions */
-    private boolean pivotOk(Signal signal, List<Candle> candles) {
-        long start = System.currentTimeMillis();
-        if (candles.size() < 2) return true; // not enough data for pivot check
+    // --------------------- Pivot Filter --------------------- //
 
+    private boolean pivotOk(Signal signal, List<Candle> candles) {
+        if (candles.size() < 2) return true;
         Candle yesterday = candles.get(candles.size() - 2);
         PivotLevels pivots = new PivotLevels(yesterday.high, yesterday.low, yesterday.close);
         double entry = signal.getEntryPrice();
 
-        boolean ok = signal.getSide() == Signal.Side.BUY
+        return signal.getSide() == Signal.Side.BUY
                 ? entry < pivots.getR1()
                 : entry > pivots.getS1();
-
-        log.debug(BLUE + "ℹ️ Pivot check {} [{}ms]" + RESET, ok, System.currentTimeMillis() - start);
-        return ok;
     }
 
-    // --- Custom Rules
+    // --------------------- Custom Rules --------------------- //
+
     private static class OpenEqualsLowRule extends AbstractRule {
-        private final BarSeries series; private final double tolerance;
-        OpenEqualsLowRule(BarSeries s, double tol) { this.series=s; this.tolerance=tol; }
-        @Override public boolean isSatisfied(int i, TradingRecord r) {
-            double open = series.getBar(0).getOpenPrice().doubleValue();
+        private final BarSeries series;
+        private final double tolerance;
+
+        OpenEqualsLowRule(BarSeries s, double tol) { this.series = s; this.tolerance = tol; }
+
+        @Override
+        public boolean isSatisfied(int i, TradingRecord r) {
+            double open = series.getBar(i).getOpenPrice().doubleValue();
             double low = series.getBar(i).getLowPrice().doubleValue();
             return Math.abs(open - low) <= open * tolerance;
         }
     }
 
     private static class OpenEqualsHighRule extends AbstractRule {
-        private final BarSeries series; private final double tolerance;
-        OpenEqualsHighRule(BarSeries s, double tol) { this.series=s; this.tolerance=tol; }
-        @Override public boolean isSatisfied(int i, TradingRecord r) {
-            double open = series.getBar(0).getOpenPrice().doubleValue();
+        private final BarSeries series;
+        private final double tolerance;
+
+        OpenEqualsHighRule(BarSeries s, double tol) { this.series = s; this.tolerance = tol; }
+
+        @Override
+        public boolean isSatisfied(int i, TradingRecord r) {
+            double open = series.getBar(i).getOpenPrice().doubleValue();
             double high = series.getBar(i).getHighPrice().doubleValue();
             return Math.abs(open - high) <= open * tolerance;
         }
     }
 
+    private static class ATRBreakRule extends AbstractRule {
+        private final BarSeries series;
+        private final ATRIndicator atr;
+        private final double factor;
+        private final boolean bullish;
+
+        ATRBreakRule(BarSeries series, ATRIndicator atr, double factor, boolean bullish) {
+            this.series = series; this.atr = atr; this.factor = factor; this.bullish = bullish;
+        }
+
+        @Override
+        public boolean isSatisfied(int index, TradingRecord record) {
+            double open = series.getBar(index).getOpenPrice().doubleValue();
+            double close = series.getBar(index).getClosePrice().doubleValue();
+            double threshold = atr.getValue(index).doubleValue() * factor;
+            return bullish ? close > open + threshold : close < open - threshold;
+        }
+    }
+
+    // --------------------- Getters --------------------- //
+
     public List<String> getOHLTimeFrameList() {
         return ohlTimeFrameList;
     }
-
-
 }
